--- a/templates/paper/paper_list.html
+++ b/templates/paper/paper_list.html
@@ -22,8 +22,8 @@
           <p class='card-text'>{{ paper.title|linebreaksbr }}</p>
         {% endif %}
         {% if paper.year is not None %}
-          <h5 class='card-title'>○年・学会・著者</h5>
-          <p class='card-text'>{{ paper.year }} {{ paper.conference|linebreaksbr }} {{ paper.author }}</p>
+          <h5 class='card-title'>○著者・年・学会</h5>
+          <p class='card-text'>{{ paper.author }}　{{ paper.year }} {{ paper.conference|linebreaksbr }}</p>
         {% endif %}
         {% if paper.memo is not None %}
           <h5 class='card-title'>○内容・感想</h5>
@@ -52,8 +52,8 @@
                 <p class='card-text'>{{ paper.title|linebreaksbr }}</p>
               {% endif %}
               {% if paper.year is not None %}
-                <h5 class='card-title'>○年・学会・著者</h5>
-                <p class='card-text'>{{ paper.year }} {{ paper.conference|linebreaksbr }} {{ paper.author }}</p>
+                <h5 class='card-title'>○著者・年・学会</h5>
+                <p class='card-text'>{{ paper.author }} {{ paper.year }} {{ paper.conference|linebreaksbr }}</p>
               {% endif %}
               {% if paper.memo is not None %}
                 <h5 class='card-title'>○内容・感想</h5>
